[gd_scene load_steps=3 format=3 uid="uid://bqfkpge82aq6b"]

[ext_resource type="Script" path="res://village/village_ui/resource_assignment_screen.gd" id="1_ywjx8"]
[ext_resource type="StyleBox" uid="uid://qc8yd50q6qp5" path="res://village/village_ui/ui_theme.tres" id="2_nnxso"]

[node name="ResourceAssignmentScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ywjx8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_nnxso")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "İşçi için Kaynak Seç"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResourceListLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Kaynaklar:"

[node name="ResourceList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="WoodButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ResourceList"]
layout_mode = 2
focus_mode = 2
text = "Odun"

[node name="WaterButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ResourceList"]
layout_mode = 2
focus_mode = 2
text = "Su"

[node name="FoodButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ResourceList"]
layout_mode = 2
focus_mode = 2
text = "Yiyecek"

[node name="StoneButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ResourceList"]
layout_mode = 2
focus_mode = 2
text = "Taş"

[node name="MetalButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ResourceList"]
layout_mode = 2
focus_mode = 2
text = "Metal"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 2
text = "Geri"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ResourceList/WoodButton" to="." method="_on_resource_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ResourceList/WaterButton" to="." method="_on_resource_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ResourceList/FoodButton" to="." method="_on_resource_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ResourceList/StoneButton" to="." method="_on_resource_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ResourceList/MetalButton" to="." method="_on_resource_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"] 